fixed issue where panels where not showing on desktop

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -29,6 +29,9 @@ body{
 	font-family: gill;
 	font-size: 100%;
 }
+#content_outer_wrapper{
+	height: 100%;
+}
 #error{
 	position: absolute;
 	bottom: 0px;
